@@ -7,6 +7,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -17,11 +18,15 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import lombok.Data;
+import net.dv8tion.jda.api.entities.Guild;
+import net.dv8tion.jda.api.entities.Member;
 import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.entities.MessageEmbed;
 import net.dv8tion.jda.api.entities.MessageReaction;
+import net.dv8tion.jda.api.entities.Role;
 import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 import net.dv8tion.jda.api.entities.channel.concrete.ThreadChannel;
+import net.dv8tion.jda.api.entities.channel.middleman.GuildChannel;
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.entities.emoji.Emoji;
 import net.dv8tion.jda.api.entities.emoji.EmojiUnion;
@@ -37,7 +42,6 @@ import net.dv8tion.jda.api.utils.FileUpload;
 import net.dv8tion.jda.internal.utils.tuple.ImmutablePair;
 import net.dv8tion.jda.internal.utils.tuple.Pair;
 import org.apache.commons.collections4.CollectionUtils;
-import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.function.Consumers;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import ti4.ResourceHelper;
@@ -65,8 +69,9 @@ import ti4.map.Tile;
 import ti4.map.UnitHolder;
 import ti4.map.persistence.GameManager;
 import ti4.map.persistence.ManagedPlayer;
-import ti4.message.BotLogger;
 import ti4.message.MessageHelper;
+import ti4.message.logging.BotLogger;
+import ti4.message.logging.LogOrigin;
 import ti4.model.ColorModel;
 import ti4.model.ExploreModel;
 import ti4.model.FactionModel;
@@ -80,6 +85,7 @@ import ti4.model.TileModel;
 import ti4.model.UnitModel;
 import ti4.selections.selectmenus.SelectFaction;
 import ti4.service.PlanetService;
+import ti4.service.agenda.IsPlayerElectedService;
 import ti4.service.button.ReactionService;
 import ti4.service.combat.CombatRollService;
 import ti4.service.combat.CombatRollType;
@@ -107,6 +113,7 @@ import ti4.service.transaction.SendDebtService;
 import ti4.service.turn.EndTurnService;
 import ti4.service.turn.StartTurnService;
 import ti4.service.unit.AddUnitService;
+import ti4.service.unit.CheckUnitContainmentService;
 import ti4.service.unit.RemoveUnitService;
 import ti4.settings.users.UserSettingsManager;
 import ti4.website.AsyncTi4WebsiteHelper;
@@ -191,8 +198,8 @@ public class ButtonHelper {
             if (game.getPhaseOfGame().contains("action")
                     && totalAmount > 1
                     && player.hasUnit("pharadn_mech")
-                    && !ButtonHelper.isLawInPlay(game, "articles_war")
-                    && ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "mech", true) < 4) {
+                    && !isLawInPlay(game, "articles_war")
+                    && getNumberOfUnitsOnTheBoard(game, player, "mech", true) < 4) {
                 String message3 = player.getRepresentation()
                         + ", please choose the planet that lost 2+ infantry where you wish to DEPLOY 1 mech on the planet (or decline).";
                 List<Button> buttons = new ArrayList<>(
@@ -309,6 +316,7 @@ public class ButtonHelper {
 
     public static List<Button> getForcedPNSendButtons(Game game, Player receiver, Player sender) {
         List<Button> stuffToTransButtons = new ArrayList<>();
+        String idNPC = "";
         for (String pnShortHand : sender.getPromissoryNotes().keySet()) {
             if (sender.getPromissoryNotesInPlayArea().contains(pnShortHand)
                     || (receiver.getAbilities().contains("hubris") && pnShortHand.endsWith("_an"))) {
@@ -331,9 +339,14 @@ public class ButtonHelper {
             } else {
                 String id = "naaluHeroSend_" + receiver.getFaction() + "_"
                         + sender.getPromissoryNotes().get(pnShortHand);
+                idNPC = id;
                 transact = Buttons.green(id, promissoryNote.getName(), owner.getFactionEmoji());
             }
             stuffToTransButtons.add(transact);
+        }
+
+        if (sender.isNpc() && !idNPC.isEmpty()) {
+            ButtonHelperHeroes.resolveNaaluHeroSend(sender, game, idNPC, null);
         }
         return stuffToTransButtons;
     }
@@ -380,7 +393,7 @@ public class ButtonHelper {
             Game game, ButtonInteractionEvent event, Player player, String buttonID) {
         String planet = buttonID.split("_")[1];
         String amount;
-        if (StringUtils.countMatches(buttonID, "_") > 1) {
+        if (countMatches(buttonID, "_") > 1) {
             amount = buttonID.split("_")[2];
         } else {
             amount = "1";
@@ -585,7 +598,7 @@ public class ButtonHelper {
             }
             Planet p = game.getPlanetsInfo().get(planet);
             if (p == null) {
-                BotLogger.warning(new BotLogger.LogMessageOrigin(player), "Null unitholder for planet " + planet);
+                BotLogger.warning(new LogOrigin(player), "Null unitholder for planet " + planet);
                 continue;
             }
             Set<String> tokenList = p.getTokenList();
@@ -618,6 +631,155 @@ public class ButtonHelper {
             }
         }
         return buttons;
+    }
+
+    public static void removeUser(
+            GenericInteractionCreateEvent event, Game game, Player player, StringBuilder stringBuilder) {
+
+        Map<String, PromissoryNoteModel> promissoryNotes = Mapper.getPromissoryNotes();
+        if (player == null) return;
+        if (player.getColor() == null
+                || player.getFaction() == null
+                || "null".equalsIgnoreCase(player.getFaction())
+                || !player.isRealPlayer()
+                || "".equalsIgnoreCase(player.getFaction())) {
+            game.removePlayer(player.getUserID());
+        } else {
+            if (!player.getPlanetsAllianceMode().isEmpty()) {
+                String msg =
+                        "This player doesn't meet the elimination conditions. If you wish to replace a player, run `/game replace`. Ping a bothelper for assistance if you need it.";
+                MessageHelper.sendMessageToChannel(event.getMessageChannel(), msg);
+                return;
+            }
+            if (game.getSpeakerUserID().equalsIgnoreCase(player.getUserID())) {
+                boolean foundSpeaker = false;
+                for (Player p4 : Helper.getSpeakerOrderFromThisPlayer(player, game)) {
+                    if (foundSpeaker) {
+                        game.setSpeakerUserID(p4.getUserID());
+                        break;
+                    }
+                    if (p4 == player) {
+                        foundSpeaker = true;
+                    }
+                }
+            }
+            // send back all the PNs of others that the player was holding
+            Set<String> pns = new HashSet<>(player.getPromissoryNotes().keySet());
+            for (String pnID : pns) {
+                PromissoryNoteModel pn = promissoryNotes.get(pnID);
+                if (pn != null
+                        && !pn.getOwner().equalsIgnoreCase(player.getColor())
+                        && !pn.getOwner().equalsIgnoreCase(player.getFaction())) {
+                    Player p2 = game.getPlayerFromColorOrFaction(pn.getOwner());
+                    player.removePromissoryNote(pnID);
+                    if (p2 == null) {
+                        BotLogger.warning(
+                                new LogOrigin(event),
+                                "Could not find player when removing eliminated player's PN: " + pn.getOwner());
+                    } else {
+                        p2.setPromissoryNote(pnID);
+                        PromissoryNoteHelper.sendPromissoryNoteInfo(game, p2, false);
+                    }
+                }
+            }
+
+            // Purge all the PNs of the eliminated player that other players were holding
+            for (Player p2 : game.getPlayers().values()) {
+                pns = new HashSet<>(p2.getPromissoryNotes().keySet());
+                for (String pnID : pns) {
+                    PromissoryNoteModel pn = promissoryNotes.get(pnID);
+                    if (pn != null
+                            && (pn.getOwner().equalsIgnoreCase(player.getColor())
+                                    || pn.getOwner().equalsIgnoreCase(player.getFaction()))) {
+                        p2.removePromissoryNote(pnID);
+                        PromissoryNoteHelper.sendPromissoryNoteInfo(game, p2, false);
+                    }
+                }
+            }
+            // Remove all the players units and ccs from the board
+            for (Tile tile : game.getTileMap().values()) {
+                tile.removeAllUnits(player.getColor());
+                if (!"null".equalsIgnoreCase(player.getColor())
+                        && CommandCounterHelper.hasCC(event, player.getColor(), tile)) {
+                    RemoveCommandCounterService.fromTile(player.getColor(), tile, game);
+                }
+            }
+            // discard all of a players ACs
+            Map<String, Integer> acs = new LinkedHashMap<>(player.getActionCards());
+            for (Map.Entry<String, Integer> ac : acs.entrySet()) {
+                game.discardActionCard(player.getUserID(), ac.getValue());
+                String sb = "Player: " + player.getUserName() + " - " + "Discarded action card:" + "\n"
+                        + Mapper.getActionCard(ac.getKey()).getRepresentation() + "\n";
+                MessageHelper.sendMessageToChannel(game.getMainGameChannel(), sb);
+            }
+            ActionCardHelper.serveReverseEngineerButtons(game, player, new ArrayList<>(acs.keySet()));
+
+            // unscore all of a players SOs
+            acs = new LinkedHashMap<>(player.getSecretsScored());
+            for (int so : acs.values()) {
+                game.unscoreSecretObjective(player.getUserID(), so);
+            }
+            // discard all of a players SOs
+
+            acs = new LinkedHashMap<>(player.getSecrets());
+            for (int so : acs.values()) {
+                game.discardSecretObjective(player.getUserID(), so);
+            }
+            // return SCs
+            Set<Integer> scs = new HashSet<>(player.getSCs());
+            for (int sc : scs) {
+                player.removeSC(sc);
+            }
+            player.setEliminated(true);
+            player.setDummy(true);
+            if (!game.isFowMode()) {
+                Helper.addMapPlayerPermissionsToGameChannels(event.getGuild(), game.getName());
+            }
+        }
+
+        Guild guild = event.getGuild();
+        Member removedMember = guild.getMemberById(player.getUserID());
+        List<Role> roles = guild.getRolesByName(game.getName(), true);
+        if (removedMember != null && roles.size() == 1) {
+            guild.removeRoleFromMember(removedMember, roles.getFirst()).queue();
+        }
+        List<Button> buttons = new ArrayList<>();
+        buttons.add(Buttons.gray(
+                player.getFinsFactionCheckerPrefix() + "removePlayerPermissions_" + player.getFaction(),
+                "Remove View Permissions " + player.getDisplayName()));
+        buttons.add(Buttons.red("deleteButtons", "Stay in channels"));
+        String msg = player.getRepresentation()
+                + " do you want to remove yourself from the game channels? If so, press this button.";
+        MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg, buttons);
+        stringBuilder
+                .append("Eliminated player: ")
+                .append(player.getUserName())
+                .append(" from game: ")
+                .append(game.getName())
+                .append("\n");
+    }
+
+    @ButtonHandler("eliminatePlayer_")
+    public static void eliminatePlayer(Game game, ButtonInteractionEvent event, String buttonID) {
+        Player player = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
+        StringBuilder stringBuilder = new StringBuilder();
+        removeUser(event, game, player, stringBuilder);
+        Helper.fixGameChannelPermissions(event.getGuild(), game);
+        deleteMessage(event);
+        MessageHelper.sendMessageToChannel(game.getActionsChannel(), stringBuilder.toString());
+    }
+
+    @ButtonHandler("removePlayerPermissions_")
+    public static void removePlayerPermissions(Game game, ButtonInteractionEvent event, String buttonID) {
+        Player player = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
+        List<GuildChannel> channels = event.getGuild().getChannels().stream()
+                .filter(c -> c.getName().startsWith(game.getName()))
+                .toList();
+        for (GuildChannel channel : channels) {
+            Helper.removePlayerPermissionsToGameChannel(event.getGuild(), channel, player.getUserID());
+        }
+        deleteMessage(event);
+        MessageHelper.sendMessageToChannel(game.getActionsChannel(), "Removed Permissions");
     }
 
     @ButtonHandler("resolveAlliancePlanetTrade_")
@@ -779,7 +941,7 @@ public class ButtonHelper {
         return buttons;
     }
 
-    public static void resolveTACheck(Game game, Player player) {
+    private static void resolveTACheck(Game game, Player player) {
         for (Player p2 : game.getRealPlayers()) {
             if (p2.getFaction().equalsIgnoreCase(player.getFaction())
                     || player.getAllianceMembers().contains((p2.getFaction()))) {
@@ -815,7 +977,7 @@ public class ButtonHelper {
         buttons.add(Buttons.gray("showDeck_relic", "Relics", ExploreEmojis.Relic));
         buttons.add(Buttons.gray("showDeck_unscoredSO", "Unscored Secret Objectives", CardEmojis.SecretObjective));
         buttons.add(Buttons.gray("showObjInfo_both", "All Revealed Objectives in Game", CardEmojis.Public1));
-        if (true || game.isAgeOfExplorationMode()) {
+        if (true) {
             buttons.add(Buttons.gray("showDeck_tiles", "Remaining Tiles", TileEmojis.TileBlueBack));
         }
         MessageHelper.sendMessageToChannelWithButtons(event.getMessageChannel(), "Pick a deck to show:", buttons);
@@ -882,28 +1044,10 @@ public class ButtonHelper {
     }
 
     public static boolean anyLawInPlay(Game game, String... lawIDs) {
-        if (game.getStoredValue("lawsDisabled").equalsIgnoreCase("yes")) {
+        if ("yes".equalsIgnoreCase(game.getStoredValue("lawsDisabled"))) {
             return false;
         }
-        return Arrays.asList(lawIDs).stream().anyMatch(lawID -> game.getLaws().containsKey(lawID));
-    }
-
-    public static boolean isPlayerElected(Game game, Player player, String lawID) {
-        if (game.getStoredValue("lawsDisabled").equalsIgnoreCase("yes")) {
-            return false;
-        }
-        if (player == null) {
-            return false;
-        }
-        for (String law : game.getLaws().keySet()) {
-            if (lawID.equalsIgnoreCase(law) && game.getLawsInfo().get(law) != null) {
-                if (game.getLawsInfo().get(law).equalsIgnoreCase(player.getFaction())
-                        || game.getLawsInfo().get(law).equalsIgnoreCase(player.getColor())) {
-                    return true;
-                }
-            }
-        }
-        return false;
+        return Arrays.stream(lawIDs).anyMatch(lawID -> game.getLaws().containsKey(lawID));
     }
 
     @ButtonHandler("drawStatusACs")
@@ -929,7 +1073,7 @@ public class ButtonHelper {
             }
             message = player.getFactionEmoji() + " triggered **Autonetic Memory** option.";
         } else {
-            if (ButtonHelper.isLawInPlay(game, "absol_minspolicy")) {
+            if (isLawInPlay(game, "absol_minspolicy")) {
                 amount -= 1;
                 message = " _Minister of Policy_ has been accounted for, causing everyone to draw 1 fewer action card.";
             } else {
@@ -949,7 +1093,7 @@ public class ButtonHelper {
             }
         }
 
-        if (isPlayerElected(game, player, "minister_policy") && !player.hasAbility("scheming")) {
+        if (IsPlayerElectedService.isPlayerElected(game, player, "minister_policy") && !player.hasAbility("scheming")) {
             String acAlias = null;
             for (Map.Entry<String, Integer> ac : Helper.getLastEntryInHashMap(game.drawActionCard(player.getUserID()))
                     .entrySet()) {
@@ -994,7 +1138,7 @@ public class ButtonHelper {
         if (game.isCustodiansScored()) {
             List<String> whens = AgendaHelper.getPossibleWhenNames(player);
             List<String> afters = AgendaHelper.getPossibleAfterNames(player);
-            if (player.isAutoPassOnWhensAfters() && whens.isEmpty() && afters.isEmpty()) {
+            if ((player.isAutoPassOnWhensAfters() && whens.isEmpty() && afters.isEmpty()) || player.isNpc()) {
                 List<Button> buttons = new ArrayList<>();
                 buttons.add(Buttons.red("undoPassOnAllWhensNAfters", "Undo Pass"));
                 MessageHelper.sendMessageToChannelWithButtons(
@@ -1092,7 +1236,7 @@ public class ButtonHelper {
                 && ghostPlayer != null
                 && ghostPlayer != player
                 && getNumberOfUnitsOnTheBoard(game, ghostPlayer, "mech", false) > 0
-                && !ButtonHelper.isLawInPlay(game, "articles_war")) {
+                && !isLawInPlay(game, "articles_war")) {
             event.getHook()
                     .sendMessage(
                             player.getRepresentation()
@@ -1101,10 +1245,10 @@ public class ButtonHelper {
                     .setEphemeral(true)
                     .queue();
         }
-        if (!game.isFowMode() && ButtonHelper.isLawInPlay(game, "minister_peace")) {
+        if (!game.isFowMode() && isLawInPlay(game, "minister_peace")) {
             if (FoWHelper.otherPlayersHaveUnitsInSystem(player, activeSystem, game)) {
                 for (Player p2 : game.getRealPlayers()) {
-                    if (isPlayerElected(game, p2, "minister_peace")) {
+                    if (IsPlayerElectedService.isPlayerElected(game, p2, "minister_peace")) {
                         if (p2 != player) {
                             List<Button> buttons2 = new ArrayList<>();
                             Button hacanButton =
@@ -1165,6 +1309,13 @@ public class ButtonHelper {
                     }
                 }
             }
+            for (UnitHolder p : activeSystem.getPlanetUnitHolders()) {
+                for (String token : p.getTokenList()) {
+                    if (magenPlayer.getPlanets().contains(p.getName()) && token.contains("superweapon")) {
+                        has = true;
+                    }
+                }
+            }
             if (!has || !magenPlayer.hasTech("md")) continue;
 
             String id = magenPlayer.finChecker() + "useMagenDefense_" + activeSystem.getPosition();
@@ -1175,7 +1326,7 @@ public class ButtonHelper {
         }
         if (player.hasAbility("void_tap")
                 && (activeSystem.getPlanetUnitHolders().isEmpty()
-                        || ButtonHelper.doesPlayerHaveFSHere("eidolon_flagship", player, activeSystem))) {
+                        || doesPlayerHaveFSHere("eidolon_flagship", player, activeSystem))) {
             int cTG = player.getTg();
             player.setTg(cTG + 1);
             MessageHelper.sendMessageToChannel(
@@ -1286,8 +1437,8 @@ public class ButtonHelper {
 
             if (CommandCounterHelper.hasCC(nonActivePlayer, activeSystem)) {
                 if (nonActivePlayer.getActionCards().containsKey("counterstroke")
-                        && !isPlayerElected(game, player, "censure")
-                        && !isPlayerElected(game, player, "absol_censure")) {
+                        && !IsPlayerElectedService.isPlayerElected(game, player, "censure")
+                        && !IsPlayerElectedService.isPlayerElected(game, player, "absol_censure")) {
                     List<Button> reverseButtons = new ArrayList<>();
                     String key = "counterstroke";
                     String ac_name = Mapper.getActionCard(key).getName();
@@ -1307,7 +1458,7 @@ public class ButtonHelper {
                 }
             }
             if (nonActivePlayer.ownsUnit("nivyn_mech")
-                    && getTilesOfPlayersSpecificUnits(game, nonActivePlayer, UnitType.Mech)
+                    && CheckUnitContainmentService.getTilesContainingPlayersUnits(game, nonActivePlayer, UnitType.Mech)
                             .contains(activeSystem)) {
                 List<Button> buttons = new ArrayList<>();
                 buttons.add(Buttons.gray("nivynMechStep1_", "Use Nivyn Mech", FactionEmojis.nivyn));
@@ -1364,7 +1515,7 @@ public class ButtonHelper {
             if (nonActivePlayer.hasUnit("mahact_mech")
                     && nonActivePlayer.hasMechInSystem(activeSystem)
                     && nonActivePlayer.getMahactCC().contains(player.getColor())
-                    && !ButtonHelper.isLawInPlay(game, "articles_war")) {
+                    && !isLawInPlay(game, "articles_war")) {
                 if (justChecking) {
                     if (!game.isFowMode()) {
                         MessageHelper.sendMessageToChannel(
@@ -1389,7 +1540,7 @@ public class ButtonHelper {
             }
             if (nonActivePlayer.hasUnit("sigma_naalu_mech")
                     && nonActivePlayer.hasMechInSystem(activeSystem)
-                    && !ButtonHelper.isLawInPlay(game, "articles_war")) {
+                    && !isLawInPlay(game, "articles_war")) {
                 if (justChecking) {
                     if (!game.isFowMode()) {
                         MessageHelper.sendMessageToChannel(
@@ -1447,7 +1598,10 @@ public class ButtonHelper {
                             "Look at Promissory Notes (" + player.getPnCount() + ")");
                     Button lookAtSOs = Buttons.green(
                             fincheckerForNonActive + "yssarilcommander_so_" + player.getFaction(),
-                            "Look at" + (isPlayerElected(game, player, "censure") ? " (Not So)" : "")
+                            "Look at"
+                                    + (IsPlayerElectedService.isPlayerElected(game, player, "censure")
+                                            ? " (Not So)"
+                                            : "")
                                     + " Secret Objectives (" + (player.getSo()) + ")");
                     Button decline = Buttons.red(fincheckerForNonActive + "deleteButtons", "Decline Yssaril Commander");
                     List<Button> buttons = List.of(lookAtACs, lookAtPNs, lookAtSOs, decline);
@@ -1494,7 +1648,7 @@ public class ButtonHelper {
                                             + nonActivePlayer.getRepresentation() + ".");
                         }
 
-                        if (pn.equalsIgnoreCase("dspntold")) {
+                        if ("dspntold".equalsIgnoreCase(pn)) {
                             game.setStoredValue("ccLimit" + player.getColor(), "15");
                             MessageHelper.sendMessageToChannel(
                                     channel,
@@ -1519,15 +1673,13 @@ public class ButtonHelper {
             List<String> fakePlanets = new ArrayList<>(List.of("custodiavigilia", "ghoti"));
             if (!fakePlanets.contains(planetName))
                 BotLogger.warning(
-                        new BotLogger.LogMessageOrigin(game),
-                        "Couldn't find tile for " + planetName + " in game " + game.getName());
+                        new LogOrigin(game), "Couldn't find tile for " + planetName + " in game " + game.getName());
             return "none";
         }
         UnitHolder unitHolder = tile.getUnitHolders().get(planetName);
         if (unitHolder == null) {
             BotLogger.warning(
-                    new BotLogger.LogMessageOrigin(game),
-                    "Couldn't find unitholder for " + planetName + " in game " + game.getName());
+                    new LogOrigin(game), "Couldn't find unitholder for " + planetName + " in game " + game.getName());
             return "none";
         }
         Set<String> tokenList = unitHolder.getTokenList();
@@ -1645,7 +1797,8 @@ public class ButtonHelper {
         }
         String finChecker = "FFCC_" + player.getFaction() + "_";
         for (Tile tile : getTilesWithYourCC(player, game, event)) {
-            if (getTilesOfPlayersSpecificUnits(game, player, UnitType.Spacedock).contains(tile)) {
+            if (CheckUnitContainmentService.getTilesContainingPlayersUnits(game, player, UnitType.Spacedock)
+                    .contains(tile)) {
                 buttonsToRemoveCC.add(Buttons.green(
                         finChecker + "removeCCFromBoard_celdauriRedTech_" + tile.getPosition(),
                         tile.getRepresentationForButtons(game, player)));
@@ -1713,7 +1866,7 @@ public class ButtonHelper {
                     player.getRepresentation() + " readied planet: " + Helper.getPlanetRepresentation(last, game)
                             + ".");
         }
-        ButtonHelper.deleteMessage(event);
+        deleteMessage(event);
     }
 
     public static boolean isPlayerOverLimit(Game game, Player player) {
@@ -1729,10 +1882,10 @@ public class ButtonHelper {
             return 999;
         }
         int limit = 7;
-        if (ButtonHelper.isLawInPlay(game, "sanctions") && !game.isAbsolMode()) {
+        if (isLawInPlay(game, "sanctions") && !game.isAbsolMode()) {
             limit = 3;
         }
-        if (ButtonHelper.isLawInPlay(game, "absol_sanctions")) {
+        if (isLawInPlay(game, "absol_sanctions")) {
             limit = 3;
             if (game.getLawsInfo().get("absol_sanctions") != null
                     && game.getLawsInfo().get("absol_sanctions").equalsIgnoreCase(player.getFaction())) {
@@ -1956,7 +2109,7 @@ public class ButtonHelper {
             UnitModel removedUnit = unitModels.getFirst();
             if (removedUnit.getIsShip() && !removedUnit.getAsyncId().contains("ff")) {
                 count += space.getUnitCount(unit);
-            } else if (removedUnit.getBaseType().equalsIgnoreCase("mech") && player.hasUnit("naaz_mech_space")) {
+            } else if ("mech".equalsIgnoreCase(removedUnit.getBaseType()) && player.hasUnit("naaz_mech_space")) {
                 count += space.getUnitCount(unit);
             }
         }
@@ -2014,7 +2167,7 @@ public class ButtonHelper {
         return count;
     }
 
-    public static int checkValuesOfNonFighterShips(Player player, Tile tile) {
+    private static int checkValuesOfNonFighterShips(Player player, Tile tile) {
         int count = 0;
         UnitHolder space = tile.getUnitHolders().get("space");
         for (UnitKey unit : space.getUnitKeys()) {
@@ -2037,15 +2190,15 @@ public class ButtonHelper {
                 if (removedUnit == null) continue;
 
                 if (removedUnit.getIsShip() || removedUnit.getIsGroundForce()) {
-                    if ((type.equalsIgnoreCase("ground") && removedUnit.getIsShip())
-                            || (type.equalsIgnoreCase("space") && removedUnit.getIsGroundForce())) {
+                    if (("ground".equalsIgnoreCase(type) && removedUnit.getIsShip())
+                            || ("space".equalsIgnoreCase(type) && removedUnit.getIsGroundForce())) {
                         continue;
                     }
                     count += removedUnit.getCost() * uh.getUnitCount(unit);
                 }
             }
         }
-        return Math.round(count * 10) / (float) 10.0;
+        return Math.round(count * 10) / 10.0f;
     }
 
     public static float checkUnitAbilityValuesOfUnits(Player player, Game game, Tile tile) {
@@ -2058,21 +2211,21 @@ public class ButtonHelper {
 
                 float hitChance;
                 if (removedUnit.getAfbDieCount(player, game) > 0) {
-                    hitChance = (((float) 11.0 - removedUnit.getAfbHitsOn(player, game)) / 10);
+                    hitChance = ((11.0f - removedUnit.getAfbHitsOn(player, game)) / 10);
                     if (game.playerHasLeaderUnlockedOrAlliance(player, "jolnarcommander")) {
                         hitChance = 1 - ((1 - hitChance) * (1 - hitChance));
                     }
                     count += removedUnit.getAfbDieCount(player, game) * hitChance * uh.getUnitCount(unit);
                 }
                 if (removedUnit.getSpaceCannonDieCount() > 0) {
-                    hitChance = (((float) 11.0 - removedUnit.getSpaceCannonHitsOn()) / 10);
+                    hitChance = ((11.0f - removedUnit.getSpaceCannonHitsOn()) / 10);
                     if (game.playerHasLeaderUnlockedOrAlliance(player, "jolnarcommander")) {
                         hitChance = 1 - ((1 - hitChance) * (1 - hitChance));
                     }
                     count += removedUnit.getSpaceCannonDieCount() * hitChance * uh.getUnitCount(unit);
                 }
                 if (removedUnit.getBombardDieCount() > 0) {
-                    hitChance = (((float) 11.0 - removedUnit.getBombardHitsOn()) / 10);
+                    hitChance = ((11.0f - removedUnit.getBombardHitsOn()) / 10);
                     if (game.playerHasLeaderUnlockedOrAlliance(player, "jolnarcommander")) {
                         hitChance = 1 - ((1 - hitChance) * (1 - hitChance));
                     }
@@ -2080,7 +2233,7 @@ public class ButtonHelper {
                 }
             }
         }
-        return Math.round(count * 10) / (float) 10.0;
+        return Math.round(count * 10) / 10.0f;
     }
 
     public static float checkCombatValuesOfUnits(Player player, Tile tile, String type) {
@@ -2093,22 +2246,22 @@ public class ButtonHelper {
 
                 float unrelententing = 0;
                 if (player.hasAbility("unrelenting")) {
-                    unrelententing = (float) 0.1;
+                    unrelententing = 0.1f;
                 } else if (player.hasAbility("fragile")) {
-                    unrelententing = (float) -0.1;
+                    unrelententing = -0.1f;
                 }
                 if (removedUnit.getIsShip() || removedUnit.getIsGroundForce()) {
-                    if ((type.equalsIgnoreCase("ground") && removedUnit.getIsShip())
-                            || (type.equalsIgnoreCase("space") && removedUnit.getIsGroundForce())) {
+                    if (("ground".equalsIgnoreCase(type) && removedUnit.getIsShip())
+                            || ("space".equalsIgnoreCase(type) && removedUnit.getIsGroundForce())) {
                         continue;
                     }
                     count += removedUnit.getCombatDieCount()
-                            * (((float) 11.0 - removedUnit.getCombatHitsOn()) / 10 + unrelententing)
+                            * ((11.0f - removedUnit.getCombatHitsOn()) / 10 + unrelententing)
                             * uh.getUnitCount(unit);
                 }
             }
         }
-        return Math.round(count * 10) / (float) 10.0;
+        return Math.round(count * 10) / 10.0f;
     }
 
     public static int checkHPOfUnits(Player player, Tile tile, String type) {
@@ -2120,8 +2273,8 @@ public class ButtonHelper {
                 if (removedUnit == null) continue;
 
                 if (removedUnit.getIsShip() || removedUnit.getIsGroundForce()) {
-                    if ((type.equalsIgnoreCase("ground") && removedUnit.getIsShip())
-                            || (type.equalsIgnoreCase("space") && removedUnit.getIsGroundForce())) {
+                    if (("ground".equalsIgnoreCase(type) && removedUnit.getIsShip())
+                            || ("space".equalsIgnoreCase(type) && removedUnit.getIsGroundForce())) {
                         continue;
                     }
                     int sustain = 0;
@@ -2170,6 +2323,33 @@ public class ButtonHelper {
                 count++;
             }
             if (p != null) {
+                for (String token : p.getTokenList()) {
+                    if (player.getPlanets().contains(p.getName()) && token.contains("superweapon")) {
+                        count++;
+                    }
+                }
+            }
+        }
+        return count;
+    }
+
+    public static int getNumberOfStructuresOnNonHomePlanets(Player player, Game game) {
+        int count = 0;
+        for (String planet : player.getPlanetsAllianceMode()) {
+            if (planet.toLowerCase().contains("custodia") || planet.contains("ghoti")) {
+                continue;
+            }
+            Tile tile = game.getTileFromPlanet(planet);
+            if (tile != null && tile.isHomeSystem(game)) {
+                continue;
+            }
+            Planet p = getUnitHolderFromPlanetName(planet, game);
+            if (p != null) {
+                count += p.getUnitCount(UnitType.Spacedock, player.getColor());
+                count += p.getUnitCount(UnitType.Pds, player.getColor());
+                if (player.hasAbility("byssus")) {
+                    count += p.getUnitCount(UnitType.Mech, player.getColor());
+                }
                 for (String token : p.getTokenList()) {
                     if (player.getPlanets().contains(p.getName()) && token.contains("superweapon")) {
                         count++;
@@ -2251,8 +2431,7 @@ public class ButtonHelper {
         Tile hs = player.getHomeSystemTile();
         if (hs == null) {
             BotLogger.warning(
-                    new BotLogger.LogMessageOrigin(player),
-                    "not finding a HS for " + player.getFaction() + " in " + game.getName());
+                    new LogOrigin(player), "not finding a HS for " + player.getFaction() + " in " + game.getName());
             return 0;
         }
         String hsPos = hs.getPosition();
@@ -2297,7 +2476,7 @@ public class ButtonHelper {
         return planetsWithUnit;
     }
 
-    public static void doButtonsForSleepers(Player player, Game game, Tile tile, ButtonInteractionEvent event) {
+    private static void doButtonsForSleepers(Player player, Game game, Tile tile, ButtonInteractionEvent event) {
         String finChecker = "FFCC_" + player.getFaction() + "_";
         if (!player.hasAbility("awaken")) {
             return;
@@ -2319,7 +2498,7 @@ public class ButtonHelper {
         }
     }
 
-    public static List<Button> getButtonsForTurningPDSIntoFS(Player player, Game game, Tile tile) {
+    private static List<Button> getButtonsForTurningPDSIntoFS(Player player, Game game, Tile tile) {
         String finChecker = "FFCC_" + player.getFaction() + "_";
         List<Button> planetsWithPDS = new ArrayList<>();
         if (!(player.hasUnit("titans_flagship")
@@ -2493,7 +2672,7 @@ public class ButtonHelper {
                     redistributeButton);
         }
         for (Player toldar : game.getRealPlayers()) {
-            if (ButtonHelper.doesPlayerHaveFSHere("toldar_flagship", toldar, tile)) {
+            if (doesPlayerHaveFSHere("toldar_flagship", toldar, tile)) {
                 if (player == toldar) {
                     continue;
                 }
@@ -2524,7 +2703,7 @@ public class ButtonHelper {
                 mahact.getCorrectChannel(),
                 mahact.getRepresentationUnfogged() + " the " + target.getColor()
                         + " command token has been removed from your fleet pool");
-        ButtonHelper.checkFleetInEveryTile(mahact, game);
+        checkFleetInEveryTile(mahact, game);
         List<Button> conclusionButtons = new ArrayList<>();
         Button endTurn = Buttons.red(target.getFinsFactionCheckerPrefix() + "turnEnd", "End Turn");
         conclusionButtons.add(endTurn);
@@ -2743,7 +2922,7 @@ public class ButtonHelper {
 
     @ButtonHandler("deleteMessage_") // deleteMessage_{Optional String to send to the event channel after}
     public static void deleteMessage(GenericInteractionCreateEvent event) {
-        if (event instanceof ButtonInteractionEvent bevent) {
+        if (event != null && event instanceof ButtonInteractionEvent bevent) {
             bevent.getMessage().delete().queue();
         }
     }
@@ -2766,7 +2945,7 @@ public class ButtonHelper {
 
     public static void deleteAllButtons(ButtonInteractionEvent event) {
         if (event == null) return;
-        event.getMessage().editMessageComponents(List.of()).queue();
+        event.getMessage().editMessageComponents(Collections.emptyList()).queue();
     }
 
     public static void deleteTheOneButton(GenericInteractionCreateEvent event) {
@@ -2791,6 +2970,13 @@ public class ButtonHelper {
             for (UnitHolder uh : tile.getUnitHolders().values()) {
                 int count = uh.countPlayersUnitsWithModelCondition(player, UnitModel::getIsStructure);
                 if (player.hasAbility("byssus")) count += uh.getUnitCount(UnitType.Mech, player);
+
+                for (String token : uh.getTokenList()) {
+                    if (player.getPlanets().contains(uh.getName()) && token.contains("superweapon")) {
+                        count++;
+                    }
+                }
+
                 if (count > 0) {
                     total += count;
                     uh.addUnit(infKey, count);
@@ -2809,7 +2995,7 @@ public class ButtonHelper {
                 }
             }
             player.setMagenInfantryCounter(player.getMagenInfantryCounter() + total);
-            ButtonHelper.deleteMessage(event);
+            deleteMessage(event);
             MessageHelper.sendMessageToChannel(
                     player.getCorrectChannel(), String.format(msg.toString(), total, player.getMagenInfantryCounter()));
         });
@@ -2832,7 +3018,7 @@ public class ButtonHelper {
             if (containsRealButton) {
                 MessageHelper.editMessageButtons(bevent, newButtons);
             } else {
-                ButtonHelper.deleteMessage(bevent);
+                deleteMessage(bevent);
             }
         }
     }
@@ -2947,10 +3133,10 @@ public class ButtonHelper {
             }
             String style = buttonString.split(";")[x + 2].toLowerCase();
             String emoji = "";
-            if (StringUtils.countMatches(buttonString, ";") > x + 2) {
+            if (countMatches(buttonString, ";") > x + 2) {
                 emoji = buttonString.split(";")[x + 3];
-                String name = StringUtils.substringBetween(emoji, ":", "(");
-                String emojiID = StringUtils.substringBetween(emoji, "=", ")");
+                String name = substringBetween(emoji, ":", "(");
+                String emojiID = substringBetween(emoji, "=", ")");
                 emoji = "<:" + name + ":" + emojiID + ">";
             }
             if ("success".equalsIgnoreCase(style)) {
@@ -3060,7 +3246,7 @@ public class ButtonHelper {
             }
         }
         Helper.isCCCountCorrect(player);
-        ButtonHelper.checkACLimit(game, player);
+        checkACLimit(game, player);
         return highest;
     }
 
@@ -3090,7 +3276,7 @@ public class ButtonHelper {
         if (player == null) {
             return values;
         }
-        if (player.getFaction().equals("neutral") && player.getUserID().equals(Constants.dicecordId)) {
+        if ("neutral".equals(player.getFaction()) && player.getUserID().equals(Constants.dicecordId)) {
             return values;
         }
         if (player.hasAbility("armada")) {
@@ -3120,9 +3306,10 @@ public class ButtonHelper {
         }
         for (UnitHolder capChecker : tile.getUnitHolders().values()) {
             Map<UnitModel, Integer> unitsByQuantity = getAllUnits(capChecker, player);
-            for (UnitModel unit : unitsByQuantity.keySet()) {
+            for (Map.Entry<UnitModel, Integer> entry : unitsByQuantity.entrySet()) {
+                UnitModel unit = entry.getKey();
                 if ("space".equalsIgnoreCase(capChecker.getName())) {
-                    capacity += unit.getCapacityValue() * unitsByQuantity.get(unit);
+                    capacity += unit.getCapacityValue() * entry.getValue();
                 }
                 // System.out.println(unit.getBaseType());
                 if ("spacedock".equalsIgnoreCase(unit.getBaseType())
@@ -3157,9 +3344,10 @@ public class ButtonHelper {
             for (Player p2 : game.getRealPlayers()) {
                 if (player.getAllianceMembers().contains(p2.getFaction())) {
                     Map<UnitModel, Integer> unitsByQuantity2 = getAllUnits(capChecker, p2);
-                    for (UnitModel unit : unitsByQuantity2.keySet()) {
+                    for (Map.Entry<UnitModel, Integer> entry : unitsByQuantity2.entrySet()) {
+                        UnitModel unit = entry.getKey();
                         if ("space".equalsIgnoreCase(capChecker.getName())) {
-                            capacity += unit.getCapacityValue() * unitsByQuantity2.get(unit);
+                            capacity += unit.getCapacityValue() * entry.getValue();
                         }
                         // System.out.println(unit.getBaseType());
                         if ("spacedock".equalsIgnoreCase(unit.getBaseType())
@@ -3184,35 +3372,36 @@ public class ButtonHelper {
         UnitHolder spaceHolder = tile.getSpaceUnitHolder();
         List<String> unitTypesCounted = new ArrayList<>();
         Map<UnitModel, Integer> unitsByQuantity = getAllUnits(spaceHolder, player);
-        for (UnitModel unit : unitsByQuantity.keySet()) {
+        for (Map.Entry<UnitModel, Integer> entry : unitsByQuantity.entrySet()) {
+            UnitModel unit = entry.getKey();
             if (!unitTypesCounted.contains(unit.getBaseType())) {
                 if ("fighter".equalsIgnoreCase(unit.getBaseType())
                         || "infantry".equalsIgnoreCase(unit.getBaseType())
                         || "mech".equalsIgnoreCase(unit.getBaseType())) {
                     if ("fighter".equalsIgnoreCase(unit.getBaseType()) && player.hasFF2Tech()) {
-                        numFighter2s += unitsByQuantity.get(unit) - fightersIgnored;
+                        numFighter2s += entry.getValue() - fightersIgnored;
                         if (numFighter2s < 0) {
                             numFighter2s = 0;
                         }
                     }
                     if ("fighter".equalsIgnoreCase(unit.getBaseType())) {
-                        ignoredFs = Math.min(fightersIgnored, unitsByQuantity.get(unit));
-                        int numCountedFighters = unit.getCapacityUsed() * unitsByQuantity.get(unit) - fightersIgnored;
+                        ignoredFs = Math.min(fightersIgnored, entry.getValue());
+                        int numCountedFighters = unit.getCapacityUsed() * entry.getValue() - fightersIgnored;
                         if (numCountedFighters < 0) {
                             numCountedFighters = 0;
                         }
                         numInfNFightersNMechs += numCountedFighters;
                     } else {
-                        numInfNFightersNMechs += unit.getCapacityUsed() * unitsByQuantity.get(unit);
+                        numInfNFightersNMechs += unit.getCapacityUsed() * entry.getValue();
                     }
-                    if (unitsByQuantity.get(unit) > 0) {
+                    if (entry.getValue() > 0) {
                         unitTypesCounted.add(unit.getBaseType());
                     }
                 } else if (unit.getIsShip()) {
                     if (player.hasAbility("capital_fleet") && unit.getBaseType().contains("destroyer")) {
-                        numOfCapitalShips += unitsByQuantity.get(unit);
+                        numOfCapitalShips += entry.getValue();
                     } else {
-                        numOfCapitalShips += unitsByQuantity.get(unit) * 2;
+                        numOfCapitalShips += entry.getValue() * 2;
                     }
                     unitTypesCounted.add(unit.getBaseType());
                 }
@@ -3227,7 +3416,7 @@ public class ButtonHelper {
                 && player == game.getActivePlayer()) {
             capacity += 2;
         }
-        int ageOfFightersFleet = 0;
+        int ageOfFightersFleet;
         if (game.isAgeOfFightersMode()) {
             if (player.hasTech("hcf2")) {
                 ageOfFightersFleet = Math.min(numFighter2s, fleetCap - numOfCapitalShips);
@@ -3358,7 +3547,7 @@ public class ButtonHelper {
         return capNCap2;
     }
 
-    public static List<String> getAllPlanetsAdjacentToTileNotOwnedByPlayer(Tile tile, Game game, Player player) {
+    private static List<String> getAllPlanetsAdjacentToTileNotOwnedByPlayer(Tile tile, Game game, Player player) {
         List<String> planets = new ArrayList<>();
         for (String pos2 : FoWHelper.getAdjacentTiles(game, tile.getPosition(), player, false)) {
             Tile tile2 = game.getTileByPosition(pos2);
@@ -3508,8 +3697,8 @@ public class ButtonHelper {
             if (!player.hasTechReady(tech)) continue;
 
             // Check for special requirements
-            if (tech.equals("dsceldr") && !hasStratCC) continue;
-            if (tech.equals("absol_pa") && player.getActionCards().size() < 2) continue;
+            if ("dsceldr".equals(tech) && !hasStratCC) continue;
+            if ("absol_pa".equals(tech) && player.getActionCards().size() < 2) continue;
 
             // Add the button
             TechnologyModel model = Mapper.getTech(tech);
@@ -3813,7 +4002,7 @@ public class ButtonHelper {
                     .toList());
         }
 
-        if (newTileID.equalsIgnoreCase("unknown")) {
+        if ("unknown".equalsIgnoreCase(newTileID)) {
             DiceHelper.Die d1 = new DiceHelper.Die(5);
 
             String message = player.getRepresentation() + " Rolled a " + d1.getResult() + " and will thus place a ";
@@ -3830,7 +4019,7 @@ public class ButtonHelper {
                 List<MiltyDraftTile> tileToPullFromUnshuffled = new ArrayList<>(unusedBlueTiles);
                 Collections.shuffle(unusedBlueTiles);
 
-                if (unusedBlueTiles.size() < 1) {
+                if (unusedBlueTiles.isEmpty()) {
                     MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Not enough tiles to draw from.");
                     return;
                 }
@@ -3838,7 +4027,7 @@ public class ButtonHelper {
                 List<MessageEmbed> tileEmbeds = new ArrayList<>();
                 List<String> ids = new ArrayList<>();
 
-                Tile tile = unusedBlueTiles.get(0).getTile();
+                Tile tile = unusedBlueTiles.getFirst().getTile();
                 TileModel tileModel = tile.getTileModel();
                 tileEmbeds.add(tileModel.getRepresentationEmbed(false));
                 ids.add(tile.getTileID());
@@ -3860,7 +4049,7 @@ public class ButtonHelper {
                 List<String> tileToPullFromUnshuffled = new ArrayList<>(redTilesToPullFrom);
                 Collections.shuffle(redTilesToPullFrom);
 
-                if (redTilesToPullFrom.size() < 1) {
+                if (redTilesToPullFrom.isEmpty()) {
                     MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Not enough tiles to draw from.");
                     return;
                 }
@@ -3868,7 +4057,7 @@ public class ButtonHelper {
                 List<MessageEmbed> tileEmbeds = new ArrayList<>();
                 List<String> ids = new ArrayList<>();
 
-                String tileID = redTilesToPullFrom.get(0);
+                String tileID = redTilesToPullFrom.getFirst();
                 ids.add(tileID);
                 TileModel tile = TileHelper.getTileById(tileID);
                 tileEmbeds.add(tile.getRepresentationEmbed(false));
@@ -3928,7 +4117,7 @@ public class ButtonHelper {
                 player.getCorrectChannel(), "# " + player.getRepresentation() + " healed the Coatl!");
         String message2 = player.getRepresentationUnfogged()
                 + ", please choose the planets you wish to exhaust to spend " + MiscEmojis.Resources_6 + ".";
-        List<Button> buttons = ButtonHelper.getExhaustButtonsWithTG(game, player, "res");
+        List<Button> buttons = getExhaustButtonsWithTG(game, player, "res");
         Button doneExhausting = Buttons.red("deleteButtons", "Done Exhausting Planets");
         buttons.add(doneExhausting);
 
@@ -4003,7 +4192,7 @@ public class ButtonHelper {
             }
         }
         int rings = game.getRingCount();
-        for (Tile tile : ButtonHelper.getTilesOfPlayersSpecificUnits(game, player, UnitType.Spacedock)) {
+        for (Tile tile : CheckUnitContainmentService.getTilesContainingPlayersUnits(game, player, UnitType.Spacedock)) {
             if (!canActivateTile(game, player, tile)) continue;
             ringButtons.add(Buttons.green(
                     finChecker + "ringTile_" + tile.getPosition(),
@@ -4161,7 +4350,7 @@ public class ButtonHelper {
             String coatlHS = "Coatl HS";
             int coatlControlID = game.getRevealedPublicObjectives().get(coatlControl);
             int coatlHSID = game.getRevealedPublicObjectives().get(coatlHS);
-            boolean scored = false;
+            boolean scored;
             for (Player p2 : game.getRealPlayers()) {
                 if (p2.getHomeSystemTile() == cTile) {
                     scored = game.scorePublicObjective(p2.getUserID(), coatlHSID);
@@ -4271,7 +4460,7 @@ public class ButtonHelper {
                 MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), msg, buttons);
             }
         }
-        if (player.hasUnit("winnu_mech") && !ButtonHelper.isLawInPlay(game, "articles_war")) {
+        if (player.hasUnit("winnu_mech") && !isLawInPlay(game, "articles_war")) {
             for (UnitHolder uH : tile.getPlanetUnitHolders()) {
                 int mechCount = uH.getUnitCount(UnitType.Mech, player.getColor());
                 if (mechCount > 0
@@ -4296,7 +4485,7 @@ public class ButtonHelper {
                 }
             }
         }
-        if (player.hasUnit("qhet_mech") && !ButtonHelper.isLawInPlay(game, "articles_war")) {
+        if (player.hasUnit("qhet_mech") && !isLawInPlay(game, "articles_war")) {
             for (UnitHolder uH : tile.getPlanetUnitHolders()) {
                 if (game.getStoredValue("planetsTakenThisRound").contains(uH.getName())) {
                     String planet = uH.getName();
@@ -4317,7 +4506,7 @@ public class ButtonHelper {
                 }
             }
         }
-        if (player.hasUnit("kollecc_mech") && !ButtonHelper.isLawInPlay(game, "articles_war")) {
+        if (player.hasUnit("kollecc_mech") && !isLawInPlay(game, "articles_war")) {
             for (UnitHolder uH : tile.getPlanetUnitHolders()) {
                 if (uH.getUnitCount(UnitType.Mech, player.getColor()) > 0) {
                     List<Button> buttons = new ArrayList<>();
@@ -4457,8 +4646,7 @@ public class ButtonHelper {
         }
         if (tradeHolder == null) {
             BotLogger.warning(
-                    new BotLogger.LogMessageOrigin(event, player),
-                    "`ButtonHelper.sendTradeHolderSomething` tradeHolder was **null**");
+                    new LogOrigin(event, player), "`ButtonHelper.sendTradeHolderSomething` tradeHolder was **null**");
             return;
         }
         if ("tg".equalsIgnoreCase(tgOrDebt)) {
@@ -4628,7 +4816,7 @@ public class ButtonHelper {
         return getPlanetExplorationButtons(game, planet, player, false);
     }
 
-    public static List<Button> getPlanetExplorationButtons(
+    private static List<Button> getPlanetExplorationButtons(
             Game game, Planet planet, Player player, boolean impressment) {
         if (planet == null || game == null) return null;
 
@@ -4733,7 +4921,7 @@ public class ButtonHelper {
         return getTilesWithPredicateForAction(player, game, action, hasPlayerUnits, includeDelete);
     }
 
-    public static List<Button> getTilesWithShipsForAction(
+    private static List<Button> getTilesWithShipsForAction(
             Player player, Game game, String action, boolean includeDelete) {
         Predicate<Tile> hasPlayerShips =
                 tile -> tile.containsPlayersUnitsWithModelCondition(player, UnitModel::getIsShip);
@@ -4745,7 +4933,7 @@ public class ButtonHelper {
         return getTilesWithPredicateForAction(player, game, action, tRue, includeDelete);
     }
 
-    public static List<Button> getTilesWithUnitsForModifyUnitsButton(
+    private static List<Button> getTilesWithUnitsForModifyUnitsButton(
             Player player, Game game, String action, boolean includeDelete) {
         Predicate<Tile> hasPlayerUnits = tile -> tile.containsPlayersUnits(player);
         List<Button> buttons = new ArrayList<>(16);
@@ -4802,7 +4990,7 @@ public class ButtonHelper {
         resolveCombatRoll(player, game, event, buttonID, true);
     }
 
-    public static void resolveCombatRoll(
+    private static void resolveCombatRoll(
             Player player, Game game, GenericInteractionCreateEvent event, String buttonID, boolean first) {
         if (player == game.getActivePlayer()
                 && !game.getStoredValue("hiredGunsInPlay").isEmpty()) {
@@ -4821,7 +5009,7 @@ public class ButtonHelper {
             Tile tile = game.getTileByPosition(pos);
             for (Player p2 : game.getRealPlayers()) {
                 if (p2 != player && player.getAllianceMembers().contains(p2.getFaction())) {
-                    if (unitHolderName.equalsIgnoreCase("space")) {
+                    if ("space".equalsIgnoreCase(unitHolderName)) {
                         if (FoWHelper.playerHasShipsInSystem(player, tile)) {
                             resolveCombatRoll(p2, game, event, buttonID, false);
                         }
@@ -4845,17 +5033,17 @@ public class ButtonHelper {
             }
         }
         if (buttonID.contains("deleteTheseButtons") && event instanceof ButtonInteractionEvent bevent) {
-            ButtonHelper.deleteAllButtons(bevent);
+            deleteAllButtons(bevent);
         } else {
             game.removeStoredValue("assignedBombardment" + player.getFaction());
         }
         CombatRollService.secondHalfOfCombatRoll(
                 player, game, event, game.getTileByPosition(pos), unitHolderName, rollType);
-        if (buttonID.contains("bombardment") && ButtonHelper.isLawInPlay(game, "conventions")) {
+        if (buttonID.contains("bombardment") && isLawInPlay(game, "conventions")) {
             boolean relevant = false;
             for (UnitHolder unitHolder : game.getTileByPosition(pos).getPlanetUnitHolders()) {
                 String planet = unitHolder.getName();
-                if (ButtonHelper.getTypeOfPlanet(game, planet).contains("cultural")) {
+                if (getTypeOfPlanet(game, planet).contains("cultural")) {
                     relevant = true;
                 }
             }
@@ -5132,7 +5320,7 @@ public class ButtonHelper {
         return buildUnitPickButton(player, action, idSuffix, tile, uh, state, unitKey, x, labelStart, color);
     }
 
-    public static Button buildRepairUnitButton(
+    private static Button buildRepairUnitButton(
             Player player, Tile tile, UnitHolder uh, UnitState state, UnitKey unitKey, int x) {
         String action = "repairDamage";
         String labelStart = "Repair";
@@ -5148,7 +5336,7 @@ public class ButtonHelper {
         return buildUnitPickButton(player, action, null, tile, uh, state, unitKey, x, labelStart, color);
     }
 
-    public static Button buildRemoveButton(
+    private static Button buildRemoveButton(
             Player player, Tile tile, UnitHolder uh, UnitState state, UnitKey unitKey, int x) {
         String action = "assignHits";
         String labelStart = "Remove";
@@ -5192,7 +5380,6 @@ public class ButtonHelper {
         String buttonID = String.join("_", idParts);
 
         return switch (style) {
-            case green -> Buttons.green(buttonID, buttonLabel, key.unitEmoji());
             case blue -> Buttons.blue(buttonID, buttonLabel, key.unitEmoji());
             case gray -> Buttons.gray(buttonID, buttonLabel, key.unitEmoji());
             case red -> Buttons.red(buttonID, buttonLabel, key.unitEmoji());
@@ -5210,26 +5397,26 @@ public class ButtonHelper {
         return buttons;
     }
 
-    public static List<Button> getButtonsForRemovingAllUnitsInSystem(
+    private static List<Button> getButtonsForRemovingAllUnitsInSystem(
             Player player, Game game, Tile tile, String type, boolean limitOne) {
         List<Button> buttons = new ArrayList<>();
         game.setStoredValue(player.getFaction() + "latestAssignHits", type);
 
-        boolean spaceCombatish = type.equalsIgnoreCase("courageouscombat")
-                || type.equalsIgnoreCase("spacecombat")
-                || type.equalsIgnoreCase("assaultcannoncombat");
+        boolean spaceCombatish = "courageouscombat".equalsIgnoreCase(type)
+                || "spacecombat".equalsIgnoreCase(type)
+                || "assaultcannoncombat".equalsIgnoreCase(type);
         boolean combat = type.contains("combat");
         boolean oneButtonPerUnit = limitOne
                 || spaceCombatish
-                || type.equalsIgnoreCase("combat"); // space combat or generic unspecified combat
+                || "combat".equalsIgnoreCase(type); // space combat or generic unspecified combat
         for (UnitHolder unitHolder : tile.getUnitHolders().values()) {
             if (unitHolder instanceof Planet
                     && (spaceCombatish
-                            && !(ButtonHelper.doesPlayerHaveFSHere("nekro_flagship", player, tile)
-                                    || ButtonHelper.doesPlayerHaveFSHere("sigma_nekro_flagship_1", player, tile)
-                                    || ButtonHelper.doesPlayerHaveFSHere("sigma_nekro_flagship_2", player, tile)))) {
+                            && !(doesPlayerHaveFSHere("nekro_flagship", player, tile)
+                                    || doesPlayerHaveFSHere("sigma_nekro_flagship_1", player, tile)
+                                    || doesPlayerHaveFSHere("sigma_nekro_flagship_2", player, tile)))) {
                 continue;
-            } else if (unitHolder instanceof Space && type.equalsIgnoreCase("groundcombat")) {
+            } else if (unitHolder instanceof Space && "groundcombat".equalsIgnoreCase(type)) {
                 continue;
             }
 
@@ -5237,20 +5424,20 @@ public class ButtonHelper {
                 if (!player.unitBelongsToPlayer(unitKey)) continue;
                 UnitModel unitModel = player.getUnitFromUnitKey(unitKey);
                 if (unitModel == null) continue;
-                if (type.equalsIgnoreCase("assaultcannoncombat")
+                if ("assaultcannoncombat".equalsIgnoreCase(type)
                         && List.of(UnitType.Fighter, UnitType.Spacedock, UnitType.Mech, UnitType.Infantry)
                                 .contains(unitKey.getUnitType())) {
                     continue;
                 }
-                if (type.equalsIgnoreCase("courageouscombat")
+                if ("courageouscombat".equalsIgnoreCase(type)
                         && List.of(UnitType.Spacedock, UnitType.Mech, UnitType.Infantry)
                                 .contains(unitKey.getUnitType())) {
                     continue;
                 }
 
                 // All sustain damage buttons for all states
-                boolean canDamage = !type.equalsIgnoreCase("courageouscombat")
-                        && !type.equalsIgnoreCase("assaultcannoncombat")
+                boolean canDamage = !"courageouscombat".equalsIgnoreCase(type)
+                        && !"assaultcannoncombat".equalsIgnoreCase(type)
                         && unitCanSustainDamage(game, player, tile, unitModel);
                 for (UnitState state : UnitState.values()) {
                     if (state.isDamaged() || !canDamage) continue;
@@ -5284,7 +5471,7 @@ public class ButtonHelper {
     private static boolean unitCanSustainDamage(Game game, Player player, Tile tile, UnitModel unitModel) {
         String unitBaseType = unitModel.getBaseType();
         return unitModel.getSustainDamage()
-                || ("warsun".equalsIgnoreCase(unitBaseType) && !ButtonHelper.isLawInPlay(game, "schematics"))
+                || ("warsun".equalsIgnoreCase(unitBaseType) && !isLawInPlay(game, "schematics"))
                 || ("mech".equalsIgnoreCase(unitBaseType)
                         && !game.getLaws().containsKey("articles_war")
                         && player.getUnitsOwned().contains("nomad_mech"))
@@ -5306,9 +5493,9 @@ public class ButtonHelper {
         List<Button> buttons = new ArrayList<>(getButtonsForRollingThalnos(
                 player, game, tile, tile.getUnitHolders().get(unitHolderName)));
         if ("space".equalsIgnoreCase(unitHolderName)
-                && (ButtonHelper.doesPlayerHaveFSHere("nekro_flagship", player, tile)
-                        || ButtonHelper.doesPlayerHaveFSHere("sigma_nekro_flagship_1", player, tile)
-                        || ButtonHelper.doesPlayerHaveFSHere("sigma_nekro_flagship_2", player, tile))) {
+                && (doesPlayerHaveFSHere("nekro_flagship", player, tile)
+                        || doesPlayerHaveFSHere("sigma_nekro_flagship_1", player, tile)
+                        || doesPlayerHaveFSHere("sigma_nekro_flagship_2", player, tile))) {
             buttons = new ArrayList<>();
             for (UnitHolder uH : tile.getUnitHolders().values()) {
                 buttons.addAll(getButtonsForRollingThalnos(player, game, tile, uH));
@@ -5330,9 +5517,9 @@ public class ButtonHelper {
         List<Button> buttons = new ArrayList<>(getButtonsForRollingThalnos(
                 player, game, tile, tile.getUnitHolders().get(unitHolderName)));
         if ("space".equalsIgnoreCase(unitHolderName)
-                && (ButtonHelper.doesPlayerHaveFSHere("nekro_flagship", player, tile)
-                        || ButtonHelper.doesPlayerHaveFSHere("sigma_nekro_flagship_1", player, tile)
-                        || ButtonHelper.doesPlayerHaveFSHere("sigma_nekro_flagship_2", player, tile))) {
+                && (doesPlayerHaveFSHere("nekro_flagship", player, tile)
+                        || doesPlayerHaveFSHere("sigma_nekro_flagship_1", player, tile)
+                        || doesPlayerHaveFSHere("sigma_nekro_flagship_2", player, tile))) {
             buttons = new ArrayList<>();
             for (UnitHolder uH : tile.getUnitHolders().values()) {
                 buttons.addAll(getButtonsForRollingThalnos(player, game, tile, uH));
@@ -5460,12 +5647,12 @@ public class ButtonHelper {
                 tile,
                 combatOnHolder);
         FOWCombatThreadMirroring.mirrorCombatMessage(event, game, message);
-        String hits = StringUtils.substringAfter(message, "Total hits ");
+        String hits = substringAfter(message, "Total hits ");
         hits = hits.split(" ")[0].replace("*", "");
         int h = Integer.parseInt(hits);
 
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), sb);
-        message = StringUtils.removeEnd(message, ";\n");
+        message = removeEnd(message, ";\n");
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), message);
         if (!game.isFowMode() && combatOnHolder instanceof Planet && h > 0 && opponent != player) {
             String msg = opponent.getRepresentationUnfogged() + " you may autoassign " + h + " hit"
@@ -5526,7 +5713,8 @@ public class ButtonHelper {
         deleteMessage(event);
     }
 
-    public static List<Button> getButtonsForRollingThalnos(Player player, Game game, Tile tile, UnitHolder unitHolder) {
+    private static List<Button> getButtonsForRollingThalnos(
+            Player player, Game game, Tile tile, UnitHolder unitHolder) {
         String finChecker = "FFCC_" + player.getFaction() + "_";
         List<Button> buttons = new ArrayList<>();
         Map<UnitKey, Integer> units = unitHolder.getUnits();
@@ -5604,7 +5792,7 @@ public class ButtonHelper {
         return buttons;
     }
 
-    public static List<Button> getUserSetupButtons(Game game) {
+    private static List<Button> getUserSetupButtons(Game game) {
         List<Button> buttons = new ArrayList<>();
         for (Player player : game.getPlayers().values()) {
             String userId = player.getUserID();
@@ -5648,7 +5836,7 @@ public class ButtonHelper {
                         + " You may wish to personalize yours with `/franken set_faction_icon`. You may use any emoji the bot may use.");
     }
 
-    public static List<Button> getFactionSetupButtons(Game game, String buttonID) {
+    private static List<Button> getFactionSetupButtons(Game game, String buttonID) {
         String userId = buttonID.split("_")[1];
         List<Button> buttons = new ArrayList<>();
         List<FactionModel> factionsOnMap = Mapper.getFactionsValues().stream()
@@ -5694,7 +5882,7 @@ public class ButtonHelper {
         }
     }
 
-    public static List<Button> getColorSetupButtons(Game game, String buttonID) {
+    private static List<Button> getColorSetupButtons(Game game, String buttonID) {
         List<Button> buttons = new ArrayList<>();
         String userId = buttonID.split("_")[1];
         String factionId = buttonID.split("_")[2];
@@ -5738,9 +5926,7 @@ public class ButtonHelper {
                         player.getCardsInfoThread(), player.getRepresentation() + message, buttons);
             } catch (Exception e) {
                 BotLogger.error(
-                        new BotLogger.LogMessageOrigin(game),
-                        "Failing to set up player #cards-info thread in " + game.getName(),
-                        e);
+                        new LogOrigin(game), "Failing to set up player #cards-info thread in " + game.getName(), e);
             }
         }
         MessageHelper.sendMessageToChannelWithButtons(channel, message, buttons);
@@ -5811,9 +5997,9 @@ public class ButtonHelper {
     }
 
     public static List<Button> getGainAndLoseCCButtons(Player player) {
-        List<Button> buttons = ButtonHelper.getGainCCButtons(player);
+        List<Button> buttons = getGainCCButtons(player);
         buttons.removeIf(b -> !b.getId().startsWith("increase_")); // remove the wiring buttons
-        buttons.addAll(ButtonHelper.getLoseCCButtons(player)); // add the redistro buttons
+        buttons.addAll(getLoseCCButtons(player)); // add the redistro buttons
         return buttons;
     }
 
@@ -5937,7 +6123,7 @@ public class ButtonHelper {
                 event.getMessageChannel(), "Please tell the bot the desired player color.", newButtons);
     }
 
-    public static List<Button> getSpeakerSetupButtons(String buttonID) {
+    private static List<Button> getSpeakerSetupButtons(String buttonID) {
         List<Button> buttons = new ArrayList<>();
         String userId = buttonID.split("_")[1];
         String factionId = buttonID.split("_")[2];
@@ -6002,7 +6188,7 @@ public class ButtonHelper {
 
     @ButtonHandler("setupStep4_")
     @ButtonHandler("setupStep5_")
-    public static void resolveSetupStep4And5(Game game, ButtonInteractionEvent event, String buttonID) {
+    private static void resolveSetupStep4And5(Game game, ButtonInteractionEvent event, String buttonID) {
         String userId = buttonID.split("_")[1];
         String factionId = buttonID.split("_")[2];
         String color = buttonID.split("_")[3];
@@ -6110,7 +6296,8 @@ public class ButtonHelper {
             }
         }
         if (player.hasUnit("ghoti_flagship")) {
-            tilesWithProduction.addAll(getTilesOfPlayersSpecificUnits(game, player, UnitType.Flagship));
+            tilesWithProduction.addAll(
+                    CheckUnitContainmentService.getTilesContainingPlayersUnits(game, player, UnitType.Flagship));
         }
         if (player.hasTech("mr") || player.hasTech("absol_mr")) {
             List<Tile> tilesWithNovaAndUnits = game.getTileMap().values().stream()
@@ -6220,7 +6407,7 @@ public class ButtonHelper {
             Tile adjTile = game.getTileByPosition(adjTilePos);
             if (adjTile == null) {
                 BotLogger.warning(
-                        new BotLogger.LogMessageOrigin(player),
+                        new LogOrigin(player),
                         "`ButtonHelper.tileHasPDS2Cover` Game: " + game.getName() + " Tile: " + tilePos
                                 + " has a null adjacent tile: `" + adjTilePos + "` within: `" + adjTiles + "`");
                 continue;
@@ -6260,8 +6447,7 @@ public class ButtonHelper {
 
                     UnitModel model = owningPlayer.getUnitFromUnitKey(unitKey);
                     if (model == null
-                            || (model.getId().equalsIgnoreCase("xxcha_mech")
-                                    && ButtonHelper.isLawInPlay(game, "articles_war"))) {
+                            || ("xxcha_mech".equalsIgnoreCase(model.getId()) && isLawInPlay(game, "articles_war"))) {
                         continue;
                     }
                     if (model.getSpaceCannonDieCount() > 0
@@ -6290,7 +6476,7 @@ public class ButtonHelper {
             Tile adjTile = game.getTileByPosition(adjTilePos);
             if (adjTile == null) {
                 BotLogger.warning(
-                        new BotLogger.LogMessageOrigin(player),
+                        new LogOrigin(player),
                         "`ButtonHelper.tileHasPDS2Cover` Game: " + game.getName() + " Tile: " + tilePos
                                 + " has a null adjacent tile: `" + adjTilePos + "` within: `" + adjTiles + "`");
                 continue;
@@ -6360,8 +6546,7 @@ public class ButtonHelper {
 
             game.setPhaseOfGame("action");
         } else {
-            BotLogger.warning(
-                    new BotLogger.LogMessageOrigin(event, player), "`ButtonHelper.startMyTurn` player is null");
+            BotLogger.warning(new LogOrigin(event, player), "`ButtonHelper.startMyTurn` player is null");
             return;
         }
 
@@ -6580,8 +6765,8 @@ public class ButtonHelper {
                         + "**. Please resolve it as soon as possible so that the game may progress.");
         game.setTemporaryPingDisable(true);
         game.setStoredValue("endTurnWhenSCFinished", sc + player.getFaction());
-        ButtonHelper.deleteTheOneButton(event);
-        ButtonHelper.deleteTheOneButton(event, "fleetLogWhenAllReactedTo_" + sc, true);
+        deleteTheOneButton(event);
+        deleteTheOneButton(event, "fleetLogWhenAllReactedTo_" + sc, true);
         for (Player p2 : game.getRealPlayers()) {
             if (!p2.hasFollowedSC(Integer.parseInt(sc))) {
                 return;
@@ -6613,8 +6798,8 @@ public class ButtonHelper {
                         + "**. Please resolve it as soon as possible so that the game may progress.");
         game.setTemporaryPingDisable(true);
         game.setStoredValue("fleetLogWhenSCFinished", sc + player.getFaction());
-        ButtonHelper.deleteTheOneButton(event);
-        ButtonHelper.deleteTheOneButton(event, "endTurnWhenAllReactedTo_" + sc, true);
+        deleteTheOneButton(event);
+        deleteTheOneButton(event, "endTurnWhenAllReactedTo_" + sc, true);
     }
 
     @ButtonHandler("moveAlongAfterAllHaveReactedToAC_")
@@ -6626,7 +6811,7 @@ public class ButtonHelper {
                         + " the active player has elected to move the game along after everyone has said \"No Sabo\" to _"
                         + ac + "_. Please respond as soon as possible so that the game may progress.");
         game.setTemporaryPingDisable(true);
-        ButtonHelper.deleteTheOneButton(event);
+        deleteTheOneButton(event);
     }
 
     @ButtonHandler("resolveTwilightMirror")
@@ -6689,7 +6874,7 @@ public class ButtonHelper {
                 && !game.getStoredValue(messageID).isEmpty()) {
             part2 = game.getStoredValue(messageID) + "_" + player.getFaction();
         }
-        if (StringUtils.countMatches(buttonID, "_") > 1) {
+        if (countMatches(buttonID, "_") > 1) {
             part2 += "_" + buttonID.split("_")[2];
             msg += " on " + buttonID.split("_")[2];
         }
@@ -6702,7 +6887,7 @@ public class ButtonHelper {
                         "## The player with the **Zeal** ability is abstaining."
                                 + (RandomHelper.isOneInX(20) ? " Not very zealous." : ""));
             }
-            if (game.getStoredValue("aftersResolved").equalsIgnoreCase("Yes")) {
+            if ("Yes".equalsIgnoreCase(game.getStoredValue("aftersResolved"))) {
                 if (AgendaHelper.getPlayersWhoNeedToPreVoted(game).isEmpty()) {
                     AgendaHelper.startTheVoting(game);
                 } else {
@@ -6749,7 +6934,6 @@ public class ButtonHelper {
             Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String messageID = buttonID.split("_")[1];
         String msg = player.getFactionEmoji() + " successfully removed the preset for " + messageID + ".";
-        String part2 = player.getFaction();
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), msg);
         if (game.getStoredValue(messageID) != null) {
             if (messageID.toLowerCase().contains("abstain")) {
@@ -6815,7 +6999,10 @@ public class ButtonHelper {
         }
         if (production) {
             if (player.hasTech("st")) {
-                youCanSpend.append(" You also have " + TechEmojis.CyberneticTech + "_Sarween Tools_.");
+                youCanSpend
+                        .append(" You also have ")
+                        .append(TechEmojis.CyberneticTech)
+                        .append("_Sarween Tools_.");
                 resourcesAvailable += 1;
             }
             if (player.hasTechReady("aida")) {
@@ -6823,9 +7010,9 @@ public class ButtonHelper {
                         .append(" You also have ")
                         .append(TechEmojis.WarfareTech)
                         .append("_AI Development Algorithm_ for ")
-                        .append(ButtonHelper.getNumberOfUnitUpgrades(player))
+                        .append(getNumberOfUnitUpgrades(player))
                         .append(" resources.");
-                resourcesAvailable += ButtonHelper.getNumberOfUnitUpgrades(player);
+                resourcesAvailable += getNumberOfUnitUpgrades(player);
             }
             if (game.playerHasLeaderUnlockedOrAlliance(player, "titanscommander")) {
                 youCanSpend.append(" You also have Titans commander..");
@@ -6837,15 +7024,6 @@ public class ButtonHelper {
                     .append(" during the PRODUCTION.");
         }
         return youCanSpend.toString();
-    }
-
-    public static List<Tile> getTilesOfPlayersSpecificUnits(Game game, Player p1, UnitType... type) {
-        List<UnitType> unitTypes = new ArrayList<>();
-        Collections.addAll(unitTypes, type);
-
-        return game.getTileMap().values().stream()
-                .filter(t -> t.containsPlayersUnitsWithKeyCondition(p1, unit -> unitTypes.contains(unit.getUnitType())))
-                .toList();
     }
 
     public static int getNumberOfUnitsOnTheBoard(Game game, Player p1, String unit) {
@@ -6873,7 +7051,7 @@ public class ButtonHelper {
                 .sum();
     }
 
-    public static int getNumberOfUnitsOnTheBoard(Game game, UnitKey unitKey, boolean countPrison) {
+    private static int getNumberOfUnitsOnTheBoard(Game game, UnitKey unitKey, boolean countPrison) {
         List<UnitHolder> unitHolders = new ArrayList<>(game.getTileMap().values().stream()
                 .flatMap(t -> t.getUnitHolders().values().stream())
                 .toList());
@@ -6921,7 +7099,7 @@ public class ButtonHelper {
                     + Helper.getPlanetRepresentation(planet, game) + ".";
             MessageHelper.sendMessageToChannel(player.getCorrectChannel(), message);
             if (!game.isFowMode()) {
-                ButtonHelper.sendMessageToRightStratThread(player, game, message, "diplomacy", null);
+                sendMessageToRightStratThread(player, game, message, "diplomacy", null);
             }
         }
         deleteMessage(event);
@@ -6953,7 +7131,7 @@ public class ButtonHelper {
         List<ThreadChannel> threadChannels = game.getActionsChannel().getThreadChannels();
         String threadName = game.getName() + "-round-" + game.getRound() + "-" + stratName.toLowerCase();
         for (ThreadChannel threadChannel_ : threadChannels) {
-            if (game.getName().equalsIgnoreCase("pbd1000") || game.getName().equalsIgnoreCase("pbd100two")) {
+            if ("pbd1000".equalsIgnoreCase(game.getName()) || "pbd100two".equalsIgnoreCase(game.getName())) {
                 if (!threadChannel_.getMembers().contains(game.getGuild().getMemberById(player.getUserID()))) {
                     continue;
                 }
@@ -7057,8 +7235,8 @@ public class ButtonHelper {
         return count;
     }
 
-    public static void purge2StarCharters(Player player) {
-        List<String> relics = new ArrayList<>(player.getRelics());
+    static void purge2StarCharters(Player player) {
+        var relics = new ArrayList<String>(player.getRelics());
         int count = 0;
         for (String relic : relics) {
             if (relic.contains("starchart") && count < 2) {
@@ -7068,7 +7246,7 @@ public class ButtonHelper {
         }
     }
 
-    public static void offerSpeakerButtons(Game game, Player player) {
+    public static void offerSpeakerButtons(Game game) {
         String assignSpeakerMessage =
                 "__Before__ you draw your action cards or look at agendas, please click a faction below to assign the Speaker token"
                         + MiscEmojis.SpeakerToken + ".";
@@ -7091,7 +7269,7 @@ public class ButtonHelper {
         return assignSpeakerButtons;
     }
 
-    public static Map<UnitModel, Integer> getAllUnits(UnitHolder unitHolder, Player player) {
+    private static Map<UnitModel, Integer> getAllUnits(UnitHolder unitHolder, Player player) {
         String colorID = Mapper.getColorID(player.getColor());
         Map<String, Integer> unitsByAsyncId = unitHolder.getUnitAsyncIdsOnHolder(colorID);
         Map<UnitModel, Integer> unitsInCombat = unitsByAsyncId.entrySet().stream()
@@ -7099,12 +7277,12 @@ public class ButtonHelper {
                         .map(x -> new ImmutablePair<>(x, entry.getValue())))
                 .collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
 
-        HashMap<UnitModel, Integer> output;
+        Map<UnitModel, Integer> output;
 
         output = new HashMap<>(
                 unitsInCombat.entrySet().stream().collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
 
-        Set<String> duplicates = new HashSet<>();
+        var duplicates = new HashSet<String>();
         List<String> dupes = output.keySet().stream()
                 .filter(unit -> !duplicates.add(unit.getAsyncId()))
                 .map(UnitModel::getBaseType)
@@ -7121,7 +7299,7 @@ public class ButtonHelper {
     }
 
     @ButtonHandler("autoProveEndurance_")
-    public static void autoProveEndurance(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
+    public static void autoProveEndurance(Player player, Game game, String buttonID) {
         game.setStoredValue("autoProveEndurance_" + player.getFaction(), buttonID.split("_")[1]);
     }
 }
